<resources>
    <string name="app_name">Hungerji</string>


    <!-- facebook id -->


    <!-- Google key for location -->


    <string name="verification">Verification</string>


    <string name="whoops">Whoops!</string>
    <string name="there_is_no_data">There is no data.</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="otp_msg">Please Enter The Code Which Is Send To You By Mail</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="or_sign_up_using">or sign up using</string>
    <string name="search">Search</string>

    <string name="mobile_number">Mobile Number</string>
    <string name="postal_address">Postal Address</string>
    <string name="your_cart">Your Cart</string>
    <string name="delivery_address">Delivery address</string>
    <string name="add_a_discount_code">Add a Discount Code</string>
    <string name="add">Add</string>
    <string name="discount">Discount</string>
    <string name="shipping_and_handling">Shipping fee :</string>
    <string name="total">Total :</string>
    <string name="continue_to_checkout">Continue to checkout</string>
    <string name="add_address">Add Address</string>
    <string name="confirm">Confirm</string>
    <string name="order_summary">Order Summary</string>
    <string name="sub_total">Sub Total</string>


    <string name="clear_cart">Clear Cart</string>
    <string name="otp_desc">We have send you a 6 digit verification code on</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dummy_review">There is more to it than a five-star rating. While the exact characteristics of good reviews vary by industry, there are certain fundamental elements that great reviews have in common. It’s worth taking note of them. </string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD-RevwGI6_-EoiCB3XeVycXMCyFN8bB8I</string>
    //AIzaSyCxVS4fkqxueNmz4VyDXqeReIeWD6dK4bo

    <string name="addressline1_hint">Enter Flat No / Floor / Landmark </string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="no_service_text">We are currently not delivering at this location at the moment. Please Try Again..</string>
    <string name="location_off_text">Your Location is Turned Off, Please turn your location on then Click on Try Again.</string>
    <string name="gps_network_not_enabled">gps_network_not_enabled</string>
    <string name="open_location_settings">open_location_settings</string>
    <string name="Cancel">Cancel</string>
</resources>