<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/parent.contentLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:contentInsetStart="0dp"
            android:elevation="4dp"
            android:background="@color/contentToolbarColor">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/iv_back"
                    android:layout_marginLeft="12dp"
                    android:scaleType="fitStart"
                    android:layout_width="55dp"
                    android:layout_height="25dp"
                    android:backgroundTint="@color/oragne"
                    android:src="@drawable/ic_back"/>

                <TextView
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:textColor="@color/contentTextColor"
                    android:textStyle="bold"
                    android:textSize="18sp"/>



            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>


        <ScrollView
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:boxStrokeColor="@color/contentTextColor"
                        android:textColorHint="@color/gray3"
                        android:layout_below="@+id/login_txt_rlt"
                        style="@style/LoginTextInputLayoutStyle"
                        android:theme="@style/LoginTextInputLayoutStyle">

                        <EditText
                            android:textSize="14sp"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/contentTextColor"
                            android:textColorHint="@color/gray0"
                            android:hint="@string/old_password"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:boxStrokeColor="@color/contentTextColor"
                        android:textColorHint="@color/gray3"
                        android:layout_below="@+id/login_txt_rlt"
                        style="@style/LoginTextInputLayoutStyle"
                        android:theme="@style/LoginTextInputLayoutStyle">

                        <EditText
                            android:textSize="14sp"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/contentTextColor"
                            android:textColorHint="@color/gray0"
                            android:hint="@string/new_password"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:boxStrokeColor="@color/contentTextColor"
                        android:textColorHint="@color/gray3"
                        android:layout_below="@+id/login_txt_rlt"
                        style="@style/LoginTextInputLayoutStyle"
                        android:theme="@style/LoginTextInputLayoutStyle">

                        <EditText
                            android:textSize="14sp"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/contentTextColor"
                            android:textColorHint="@color/gray0"
                            android:hint="@string/confirm_password"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_alignParentBottom="true"
                    android:background="@color/contentToolbarColor"
                    android:id="@+id/button_layout"
                    android:layout_height="70dp">

                    <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/button_rounded_with_red_background"
                        android:gravity="center"
                        android:windowSoftInputMode="adjustPan|adjustResize">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/change_password"
                            android:textColor="@color/color_white"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                    </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>

                </RelativeLayout>

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>
</FrameLayout>